<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.scheidegger.jegplayer.view.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_list_heading"
        android:textColor="@android:color/black" />

    <ListView
        android:id="@+id/lst_songs"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_music_name"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:id="@+id/cur_music_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/control_previous"
            android:contentDescription="@string/btn_previous_desc"/>

        <ImageButton
            android:id="@+id/btn_play_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/control_play"
            android:contentDescription="@string/btn_play_pause_desc" />

        <ImageButton
            android:id="@+id/btn_stop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/control_stop"
            android:contentDescription="@string/btn_stop_desc" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/control_next"
            android:contentDescription="@string/btn_next_desc" />

    </LinearLayout>

</LinearLayout>
